--- a/index.html
+++ b/index.html
@@ -7,6 +7,60 @@
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
-    <h1>CSS</h1>
+    <!-- minipage 1 -->
+    <!-- section#mp1>(header>nav>ul>(li>a[href="#"]{Link $})*6)+main+aside+footer -->
+    <section id="mp1">
+        <header>
+            <h1>Minipage 1</h1>
+            <nav>
+                <ul>
+                    <li><a href="#">Link 1</a></li>
+                    <li><a href="#">Link 2</a></li>
+                    <li><a href="#">Link 3</a></li>
+                    <li><a href="#">Link 4</a></li>
+                    <li><a href="#">Link 5</a></li>
+                    <li><a href="#">Link 6</a></li>
+                </ul>
+            </nav>
+        </header>
+        <main>
+            <h2>Main</h2>
+            <article>
+                <h3>Titulo del articulo</h3>
+                <footer>
+                    <p>Pie del articulo</p>
+                </footer>
+            </article>
+            <article>
+                <h3>Titulo del articulo 2</h3>
+                <footer>
+                    <p>Pie del articulo</p>
+                </footer>
+            </article>
+        </main>
+        <aside>
+            <h2>Aside</h2>
+        </aside>
+        <footer>
+            <h2>Footer</h2>
+        </footer>
+    </section>
+
+    <!-- header>nav>ul>(li>a[href="#"]{Link $})*6 -->
+    <header>
+        <h1 class="verde">CSS</h1>
+        <nav>
+            <ul>
+                <li id="link1"><a href="https://youtube.com">Link 1</a></li>
+                <li class="rojo"><a href="https://miyoutube.com">Link 2</a></li>
+                <li class="verde"><a href="http://empersa.mx">Link 3</a></li>
+                <li><a href="#info">Link 4</a></li>
+                <li class="rojo"><a href="clientes">Link 5</a></li>
+                <li id="link6"><a href="#">Link 6</a></li>
+            </ul>
+        </nav>
+    </header>
+    <p lang="en">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla laboriosam iusto adipisci, id sit consequatur atque ad necessitatibus aliquid cupiditate illum eaque reprehenderit exercitationem reiciendis velit perspiciatis at fugit enim?</p>
+    <p lang="es">Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, atque et omnis repellendus sapiente soluta cumque aut? Alias dolor eos nam provident reiciendis voluptatum porro accusamus ipsum reprehenderit, dicta ex?</p>
 </body>
 </html>
